--- a/css/estilos.css
+++ b/css/estilos.css
@@ -77,13 +77,13 @@ header {
 }
 
 .titulo {
-    font-size: 6.7em;
+    font-size: 3em;
     font-weight: 700;
     color: white;
 }
 
 .subtitulo {
-    font-size: 3.8em;
+    font-size: 2em;
     font-weight: 700;
     color: white;
 }
@@ -94,11 +94,11 @@ header {
 }
 
 .principal img {
-    width: 42.8em;
+    width: 44em;
 }
 
 .secundario img {
-    width: 22em;
+    width: 21.1em;
 }
 
 .footer {
@@ -109,8 +109,44 @@ header {
     margin: 0em 0em 3em 0em;
 }
 
-@media (min-width: 1439px) {
+@media (min-width: 1024px) {
     .container {
-        max-width: 1400px;
+        max-width: 1441px;
+    }
+    .principal img {
+        width: 44.1em;
+    }
+    .secundario img {
+        width: 21.5em;
+    }
+}
+
+@media (min-width: 768px)and (max-width:1023.999px) {
+    .principal img {
+        width: 31.1em;
+    }
+    .secundario img {
+        width: 15.1em;
+    }
+    .titulo {
+        font-size: 4.5em;
+    }
+    .subtitulo {
+        font-size: 2.5em;
+    }
+}
+
+@media (min-width: 425px)and (max-width:767.999px) {
+    .principal img {
+        width: 21.7em;
+    }
+    .secundario img {
+        width: 10.6em;
+    }
+    .titulo {
+        font-size: 3.3em;
+    }
+    .subtitulo {
+        font-size: 1.8em;
     }
 }
