--- a/css/estilos.css
+++ b/css/estilos.css
@@ -38,16 +38,17 @@ header {
 }
 
 .tipo-fecha {
-    width: 13em;
-    height: 13em;
+    width: 9.5em;
+    height: 9.5em;
     border-radius: 0.8em;
     border: 2px solid black;
     background-color: white;
     padding: 0.5em;
+    margin: 1.5em;
 }
 
 .tipo-dia {
-    font-size: 2em;
+    font-size: 1.8em;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 700;
     color: #E60024;
@@ -55,29 +56,15 @@ header {
 }
 
 .tipo-nro {
-    font-size: 6.8em;
+    font-size: 4.5em;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 700;
     color: black;
     line-height: 1em;
 }
 
-.al {
-    font-size: 2.2em;
-    font-weight: 700;
-    position: absolute;
-    top: 2em;
-    left: 6.6em;
-    width: 2em;
-    height: 2em;
-    border-radius: 1em;
-    color: white;
-    background-color: black;
-    z-index: 1;
-}
-
 .titulo {
-    font-size: 3em;
+    font-size: 2.5em;
     font-weight: 700;
     color: white;
 }
@@ -109,7 +96,7 @@ header {
     margin: 0em 0em 3em 0em;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1024px) and (max-width: 2500px) {
     .container {
         max-width: 1441px;
     }
@@ -118,6 +105,35 @@ header {
     }
     .secundario img {
         width: 21.5em;
+    }
+    .titulo {
+        font-size: 6.6em;
+    }
+    .subtitulo {
+        font-size: 3.7em;
+    }
+    .tipo-fecha {
+        width: 13em;
+        height: 13em;
+        border-radius: 0.8em;
+        border: 2px solid black;
+        background-color: white;
+        padding: 0.5em;
+        margin: 1em;
+    }
+    .tipo-dia {
+        font-size: 2em;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 700;
+        color: #E60024;
+        line-height: 1em;
+    }
+    .tipo-nro {
+        font-size: 6.8em;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 700;
+        color: black;
+        line-height: 1em;
     }
 }
 
@@ -148,5 +164,22 @@ header {
     }
     .subtitulo {
         font-size: 1.8em;
+    }
+    .logo img {
+        width: 25em;
+    }
+    .tipo-fecha {
+        width: 10em;
+        height: 10em;
+        border-radius: 0.7em;
+        padding: 0.2em;
+    }
+    .tipo-dia {
+        font-size: 1.9em;
+        line-height: 1.1em;
+    }
+    .tipo-nro {
+        font-size: 5.5em;
+        line-height: 0.9em;
     }
 }
